--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
     <canvas id="canvas" width="1280" height="720"></canvas>
-    <script src="jquery.min.js"></script>
-    <script src="yaml.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
+    <script src="lib/yaml.min.js"></script>
     <script src="tiles.js"></script>
     <script src="game.js"></script>
 </body>
