--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <canvas id="canvas" width="1280" height="720"></canvas>
     <script src="lib/jquery.min.js"></script>
     <script src="lib/yaml.min.js"></script>
+    <script src="util.js"></script>
     <script src="tiles.js"></script>
     <script src="game.js"></script>
 </body>
