sick beats lmao

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="util.js"></script>
     <script src="tiles.js"></script>
     <script src="game.js"></script>
+    <audio src="assets/bgm.mp3" autoplay></audio>
 </body>
 
 </html>
