--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
 <body>
     <canvas id="canvas" width="1280" height="720"></canvas>
     <script src="lib/jquery.min.js"></script>
+    <script src="lib/howler.min.js"></script>
     <script src="lib/yaml.min.js"></script>
     <script src="util.js"></script>
     <script src="tiles.js"></script>
     <script src="game.js"></script>
     <audio src="assets/bgm.mp3" autoplay></audio>
+    <center>
+        wasd to move<br /> r to reset
+    </center>
 </body>
 
 </html>
