--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>miniature octo tribble</title>
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     <style type="text/css">
+        html, body {
+            background-color: #333;
+            color: #fff;
+        }
         canvas#canvas {
             display: block;
             margin: auto;
