--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
-    <title>miniature octo tribble</title>
+    <title>Mergem - A Unique Puzzle Game</title>
     <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
     <style type="text/css">
         html, body {
             background-color: #333;
             color: #fff;
+            font-family: sans-serif;
         }
         canvas#canvas {
             display: block;
@@ -25,7 +26,8 @@
     <script src="tiles.js"></script>
     <script src="game.js"></script>
     <center>
-        wasd to move<br /> r to reset
+        <p>wasd to move<br /> r to reset</p>
+        <p>Created at MinneHack 2017.</p>
     </center>
 </body>
 
