--- a/index.html
+++ b/index.html
@@ -2,40 +2,28 @@
 
 <head>
     <title>Mergem - A Unique Puzzle Game</title>
-    <link href="https://fonts.googleapis.com/css?family=Alfa+Slab+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300|Alfa+Slab+One" rel="stylesheet">
     <style type="text/css">
     html,
     body {
+        margin: 0;
         background-color: #333;
         color: #fff;
     }
-    
     canvas#canvas {
         display: block;
         margin: auto;
         background-color: #000;
     }
-    
-    center {
-        -moz-user-select: none;
-        -webkit-user-select: none;
-        ms-user-select: none;
-        cursor: default;
-    }
     </style>
 </head>
 
 <body>
-    <canvas id="canvas" width="1280" height="720"></canvas>
-    <script src="lib/jquery.min.js"></script>
-    <script src="lib/howler.min.js"></script>
-    <script src="lib/yaml.min.js"></script>
-    <script src="util.js"></script>
-    <script src="tiles.js"></script>
-    <script src="game.js"></script>
-    <center>
-        <p>Created at MinneHack 2017.</p>
-    </center>
+    <canvas id="canvas"></canvas>
+    <script src="ext/jquery.min.js"></script>
+    <script src="ext/howler.min.js"></script>
+    <script src="ext/yaml.min.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
